Created main menu scene with cursor implementation to move between options, not functional until the gui assets and style sheets are present

--- a/code/Makefile.am
+++ b/code/Makefile.am
@@ -16,6 +16,7 @@ bin_PROGRAMS = CamelRace
 
 CamelRace_SOURCES = \
 	src/main.cpp \
+	src/MainMenuScene.cpp \
 	src/SceneFactory.cpp
 
 CamelRace_LDADD = $(OGF_LIBS)
