--- a/config/resources.cfg
+++ b/config/resources.cfg
@@ -1,13 +1,13 @@
 [General]
-FileSystem=media
-FileSystem=media/models/
-FileSystem=media/gui/overlays
-FileSystem=media/music
+FileSystem=../media
+FileSystem=../media/models/
+FileSystem=../media/gui/overlays
+FileSystem=../media/music
 [Schemes]
-FileSystem=media/gui/schemes
+FileSystem=../media/gui/schemes
 [Imagesets]
-FileSystem=media/gui/imagesets
+FileSystem=../media/gui/imagesets
 [Fonts]
-FileSystem=media/gui/fonts
+FileSystem=../media/gui/fonts
 [LookNFeel]
-FileSystem=media/gui/looknfeel
+FileSystem=../media/gui/looknfeel
