Added gui resources

--- a/config/resources.cfg
+++ b/config/resources.cfg
@@ -1,7 +1,7 @@
 [General]
 FileSystem=../media
 FileSystem=../media/models/
-FileSystem=../media/gui/overlays
+FileSystem=../media/gui/
 FileSystem=../media/music
 [Schemes]
 FileSystem=../media/gui/schemes
