--- a/config/scenes/main_menu.cfg
+++ b/config/scenes/main_menu.cfg
@@ -1,1 +1,13 @@
-test:8
+play_x:700
+play_y:170
+options_x:400
+options_y:680
+help_x:670
+help_y:680
+exit_x:870
+exit_y:680
+
+font_color_unselected:FFFFFFFF
+font_color_selected:FFCC0505
+font_big:MoanLisa-Big
+font_small:MoanLisa-Small
