Created basic scene with plane, lights and camera

--- a/code/Makefile.am
+++ b/code/Makefile.am
@@ -6,7 +6,7 @@ AM_CPPFLAGS = \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
 	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
 	-I "./include" \
-	$(OGF_CFLAGS)
+	$(OGF_CFLAGS) $(OgreBullet_CFLAGS) $(bullet_CFLAGS)
 
 AM_CFLAGS =\
 	 -Wall\
@@ -18,7 +18,8 @@ CamelRace_SOURCES = \
 	src/main.cpp \
 	src/GameScene.cpp \
 	src/MainMenuScene.cpp \
+	src/Model.cpp \
 	src/SceneFactory.cpp \
 	src/TeamMenuScene.cpp
 
-CamelRace_LDADD = $(OGF_LIBS)
+CamelRace_LDADD = $(OGF_LIBS) $(OgreBullet_LIBS) $(bullet_LIBS)
