Time count and laps detection

--- a/config/resources.cfg
+++ b/config/resources.cfg
@@ -2,6 +2,7 @@
 FileSystem=../media
 FileSystem=../media/models/
 FileSystem=../media/gui/
+FileSystem=../media/gui/overlays
 FileSystem=../media/music
 [Schemes]
 FileSystem=../media/gui/schemes
